// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component VipModal renders correctly 1`] = `
<Modal
  animationType="none"
  hardwareAccelerated={false}
  hideModalContentWhileAnimating={true}
  onModalHide={[Function]}
  onModalWillHide={[Function]}
  onModalWillShow={[Function]}
  onRequestClose={[Function]}
  scrollHorizontal={false}
  scrollOffset={0}
  scrollOffsetMax={0}
  scrollTo={null}
  supportedOrientations={
    Array [
      "portrait",
      "landscape",
    ]
  }
  swipeThreshold={100}
  transparent={true}
  visible={true}
>
  <View
    accessible={true}
    focusable={true}
    forwardedRef={[Function]}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "backgroundColor": "black",
        "bottom": 0,
        "height": 1334,
        "left": 0,
        "opacity": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "width": 750,
      }
    }
  />
  <View
    forwardedRef={[Function]}
    hideModalContentWhileAnimating={true}
    onModalHide={[Function]}
    onModalWillHide={[Function]}
    onModalWillShow={[Function]}
    pointerEvents="box-none"
    scrollHorizontal={false}
    scrollOffset={0}
    scrollOffsetMax={0}
    scrollTo={null}
    style={
      Object {
        "backgroundColor": "rgba(34,34,34, 0.6)",
        "flex": 1,
        "justifyContent": "center",
        "margin": 37.5,
        "marginBottom": 0,
        "marginLeft": 0,
        "marginRight": 0,
        "marginTop": 0,
        "transform": Array [
          Object {
            "translateY": 1334,
          },
        ],
      }
    }
    supportedOrientations={
      Array [
        "portrait",
        "landscape",
      ]
    }
    swipeThreshold={100}
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
          },
        ]
      }
    >
      <Image
        resizeMode="contain"
        source={1}
        style={
          Array [
            Object {
              "height": 176,
              "marginBottom": 48,
              "width": 176,
            },
          ]
        }
      />
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "justifyContent": "center",
            },
          ]
        }
        width={686}
      >
        <Image
          bannerType="STAR"
          resizeMode="contain"
          source={1}
          style={
            Array [
              Object {
                "height": 125.44,
                "width": 686,
              },
            ]
          }
          width={686}
        />
        <Text
          alignCenter={false}
          allowFontScaling={false}
          bannerType="STAR"
          color="#000000"
          fontFamily="BOLD"
          fontSize={22}
          isUnderlined={false}
          isUppercase={true}
          maxFontSizeMultiplier={1.3}
          size="BANNER_LARGE"
          style={
            Array [
              Object {
                "color": "#000000",
                "fontFamily": "CalibreBold",
                "fontSize": 34.5,
                "justifyContent": "center",
                "textAlign": "left",
                "textDecorationColor": "#000000",
                "textDecorationLine": "none",
                "textDecorationStyle": "solid",
                "textTransform": "uppercase",
              },
              Object {
                "color": "#FFFFFF",
                "letterSpacing": 1.5,
                "position": "absolute",
              },
            ]
          }
        >
          VIP
        </Text>
      </View>
      <View
        height={286}
        onLayout={[Function]}
        paddingTop={20}
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#FFFFFF",
              "borderBottomLeftRadius": 16,
              "borderBottomRightRadius": 16,
              "height": 572,
              "justifyContent": "flex-start",
              "marginTop": -40,
              "paddingHorizontal": 42,
              "paddingTop": 40,
              "shadowColor": "rgba(53, 53, 53, 0.3)",
              "shadowOffset": Object {
                "height": 4,
                "width": 4,
              },
              "shadowOpacity": 1,
              "shadowRadius": 2,
              "width": "85%",
              "zIndex": -1,
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "flex-start",
                "height": 254,
                "justifyContent": "center",
                "width": "70%",
              },
            ]
          }
        >
          <View
            marginTop={0}
            style={
              Array [
                Object {
                  "flexDirection": "row",
                  "marginTop": 0,
                },
              ]
            }
          >
            <Image
              resizeMode="contain"
              source={1}
              style={
                Array [
                  Object {
                    "height": 40,
                    "width": 40,
                  },
                ]
              }
            />
            <Text
              alignCenter={false}
              allowFontScaling={true}
              color="#353535"
              fontFamily="REGULAR"
              isUnderlined={false}
              isUppercase={false}
              maxFontSizeMultiplier={1.3}
              size="XSMALL"
              style={
                Array [
                  Object {
                    "color": "#353535",
                    "fontFamily": "CalibreRegular",
                    "fontSize": 24,
                    "justifyContent": "center",
                    "textAlign": "left",
                    "textDecorationColor": "#353535",
                    "textDecorationLine": "none",
                    "textDecorationStyle": "solid",
                    "textTransform": "none",
                  },
                  Object {
                    "marginLeft": 16,
                    "paddingTop": 10,
                  },
                ]
              }
            >
              Token purchase 0% bonus
            </Text>
          </View>
          <View
            marginTop={8}
            style={
              Array [
                Object {
                  "flexDirection": "row",
                  "marginTop": 16,
                },
              ]
            }
          >
            <Image
              resizeMode="contain"
              source={1}
              style={
                Array [
                  Object {
                    "height": 40,
                    "width": 40,
                  },
                ]
              }
            />
            <Text
              alignCenter={false}
              allowFontScaling={true}
              color="#353535"
              fontFamily="REGULAR"
              isUnderlined={false}
              isUppercase={false}
              maxFontSizeMultiplier={1.3}
              size="XSMALL"
              style={
                Array [
                  Object {
                    "color": "#353535",
                    "fontFamily": "CalibreRegular",
                    "fontSize": 24,
                    "justifyContent": "center",
                    "textAlign": "left",
                    "textDecorationColor": "#353535",
                    "textDecorationLine": "none",
                    "textDecorationStyle": "solid",
                    "textTransform": "none",
                  },
                  Object {
                    "marginLeft": 16,
                    "paddingTop": 10,
                  },
                ]
              }
            >
              Token purchase 0% bonus
            </Text>
          </View>
          <View
            marginTop={8}
            style={
              Array [
                Object {
                  "flexDirection": "row",
                  "marginTop": 16,
                },
              ]
            }
          >
            <Image
              resizeMode="contain"
              source={1}
              style={
                Array [
                  Object {
                    "height": 40,
                    "width": 40,
                  },
                ]
              }
            />
            <Text
              alignCenter={false}
              allowFontScaling={true}
              color="#353535"
              fontFamily="REGULAR"
              isUnderlined={false}
              isUppercase={false}
              maxFontSizeMultiplier={1.3}
              size="XSMALL"
              style={
                Array [
                  Object {
                    "color": "#353535",
                    "fontFamily": "CalibreRegular",
                    "fontSize": 24,
                    "justifyContent": "center",
                    "textAlign": "left",
                    "textDecorationColor": "#353535",
                    "textDecorationLine": "none",
                    "textDecorationStyle": "solid",
                    "textTransform": "none",
                  },
                  Object {
                    "marginLeft": 16,
                    "paddingTop": 10,
                  },
                ]
              }
            >
              Free 0 tokens on level up
            </Text>
          </View>
        </View>
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#5F6EAF",
                "borderRadius": 16,
                "height": 254,
                "paddingTop": 48,
                "width": "92.5%",
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "width": 366,
                },
              ]
            }
          >
            <View
              isCenter={true}
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "center",
                    "marginTop": 0,
                  },
                ]
              }
            >
              <View
                bgColor="#F06B59"
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#F06B59",
                      "borderRadius": 24,
                      "height": 48,
                      "justifyContent": "center",
                      "width": 48,
                    },
                  ]
                }
              >
                <Text
                  alignCenter={false}
                  allowFontScaling={true}
                  color="#000000"
                  fontFamily="BOLD"
                  isUnderlined={false}
                  isUppercase={false}
                  maxFontSizeMultiplier={1.3}
                  size="XSMALL"
                  style={
                    Array [
                      Object {
                        "color": "#000000",
                        "fontFamily": "CalibreBold",
                        "fontSize": 24,
                        "justifyContent": "center",
                        "textAlign": "left",
                        "textDecorationColor": "#000000",
                        "textDecorationLine": "none",
                        "textDecorationStyle": "solid",
                        "textTransform": "none",
                      },
                      Object {
                        "color": "#FFFFFF",
                        "lineHeight": 38,
                        "marginTop": 10,
                      },
                    ]
                  }
                >
                  1
                </Text>
              </View>
              <View
                style={
                  Array [
                    Object {
                      "backgroundColor": "#E5E5E5",
                      "borderRadius": 12,
                      "height": 16,
                      "marginHorizontal": 12,
                      "width": "70%",
                    },
                  ]
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "backgroundColor": "#FFDB4F",
                        "borderRadius": 12,
                        "height": 16,
                        "position": "absolute",
                        "width": "0%",
                      },
                    ]
                  }
                  width={0}
                />
              </View>
              <View
                bgColor="#E5E5E5"
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#E5E5E5",
                      "borderRadius": 24,
                      "height": 48,
                      "justifyContent": "center",
                      "width": 48,
                    },
                  ]
                }
              >
                <Text
                  alignCenter={false}
                  allowFontScaling={true}
                  color="#000000"
                  fontFamily="BOLD"
                  isUnderlined={false}
                  isUppercase={false}
                  maxFontSizeMultiplier={1.3}
                  size="XSMALL"
                  style={
                    Array [
                      Object {
                        "color": "#000000",
                        "fontFamily": "CalibreBold",
                        "fontSize": 24,
                        "justifyContent": "center",
                        "textAlign": "left",
                        "textDecorationColor": "#000000",
                        "textDecorationLine": "none",
                        "textDecorationStyle": "solid",
                        "textTransform": "none",
                      },
                      Object {
                        "color": "#FFFFFF",
                        "lineHeight": 38,
                        "marginTop": 10,
                      },
                    ]
                  }
                >
                  2
                </Text>
              </View>
            </View>
            <View
              isCenter={true}
              marginTop={true}
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "center",
                    "marginTop": 18,
                  },
                ]
              }
            >
              <Image
                resizeMode="cover"
                source={1}
                style={
                  Array [
                    Object {
                      "height": 24,
                      "width": 24,
                    },
                  ]
                }
              />
              <Text
                alignCenter={false}
                allowFontScaling={true}
                color="#FFFFFF"
                fontFamily="MEDIUM"
                isUnderlined={false}
                isUppercase={false}
                maxFontSizeMultiplier={1.3}
                size="XXSMALL"
                style={
                  Array [
                    Object {
                      "color": "#FFFFFF",
                      "fontFamily": "Calibre-Medium",
                      "fontSize": 21,
                      "justifyContent": "center",
                      "textAlign": "left",
                      "textDecorationColor": "#FFFFFF",
                      "textDecorationLine": "none",
                      "textDecorationStyle": "solid",
                      "textTransform": "none",
                    },
                    Object {
                      "marginLeft": 10,
                      "paddingTop": 12,
                    },
                  ]
                }
              >
                Only 80 away from level 2
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={
          Array [
            Object {
              "alignItems": "center",
              "justifyContent": "center",
              "marginHorizontal": 10,
              "marginVertical": 10,
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "rgba(96,202,142,1)",
              "borderRadius": 88,
              "height": 176,
              "justifyContent": "center",
              "marginTop": -92,
              "opacity": 1,
              "width": 542,
            }
          }
          testID="dismiss-button"
        >
          <View
            borderRadius={44}
            colorScheme="rgba(128,229,173,1)"
            height={88}
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "rgba(128,229,173,1)",
                  "borderRadius": 88,
                  "height": 166,
                  "justifyContent": "center",
                  "width": 536,
                },
              ]
            }
            width={271}
          >
            <View
              borderRadius={44}
              colorScheme="rgba(114,213,158,1)"
              height={88}
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "rgba(114,213,158,1)",
                    "borderRadius": 108,
                    "height": 162,
                    "justifyContent": "center",
                    "marginTop": 8,
                    "width": 536,
                  },
                ]
              }
              width={271}
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "justifyContent": "center",
                    },
                  ]
                }
              >
                <Text
                  alignCenter={false}
                  allowFontScaling={true}
                  color="#FFFFFF"
                  fontFamily="MEDIUM"
                  isUnderlined={false}
                  isUppercase={false}
                  maxFontSizeMultiplier={1.3}
                  size="XLARGE"
                  style={
                    Array [
                      Object {
                        "color": "#FFFFFF",
                        "fontFamily": "Calibre-Medium",
                        "fontSize": 36,
                        "justifyContent": "center",
                        "textAlign": "left",
                        "textDecorationColor": "#FFFFFF",
                        "textDecorationLine": "none",
                        "textDecorationStyle": "solid",
                        "textTransform": "none",
                      },
                      Object {
                        "marginTop": 14,
                      },
                    ]
                  }
                >
                  Awesome!
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</Modal>
`;

exports[`Component VipModal renders correctly when !isVisible 1`] = `
<Modal
  animationType="none"
  hardwareAccelerated={false}
  hideModalContentWhileAnimating={true}
  onModalHide={[Function]}
  onModalWillHide={[Function]}
  onModalWillShow={[Function]}
  onRequestClose={[Function]}
  scrollHorizontal={false}
  scrollOffset={0}
  scrollOffsetMax={0}
  scrollTo={null}
  supportedOrientations={
    Array [
      "portrait",
      "landscape",
    ]
  }
  swipeThreshold={100}
  transparent={true}
  visible={false}
>
  <View
    accessible={true}
    focusable={true}
    forwardedRef={[Function]}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "backgroundColor": "black",
        "bottom": 0,
        "height": 1334,
        "left": 0,
        "opacity": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "width": 750,
      }
    }
  />
  <View
    forwardedRef={[Function]}
    hideModalContentWhileAnimating={true}
    onModalHide={[Function]}
    onModalWillHide={[Function]}
    onModalWillShow={[Function]}
    pointerEvents="box-none"
    scrollHorizontal={false}
    scrollOffset={0}
    scrollOffsetMax={0}
    scrollTo={null}
    style={
      Object {
        "backgroundColor": "rgba(34,34,34, 0.6)",
        "flex": 1,
        "justifyContent": "center",
        "margin": 37.5,
        "marginBottom": 0,
        "marginLeft": 0,
        "marginRight": 0,
        "marginTop": 0,
        "transform": Array [
          Object {
            "translateY": 0,
          },
        ],
      }
    }
    supportedOrientations={
      Array [
        "portrait",
        "landscape",
      ]
    }
    swipeThreshold={100}
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
          },
        ]
      }
    >
      <Image
        resizeMode="contain"
        source={1}
        style={
          Array [
            Object {
              "height": 176,
              "marginBottom": 48,
              "width": 176,
            },
          ]
        }
      />
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "justifyContent": "center",
            },
          ]
        }
        width={686}
      >
        <Image
          bannerType="STAR"
          resizeMode="contain"
          source={1}
          style={
            Array [
              Object {
                "height": 125.44,
                "width": 686,
              },
            ]
          }
          width={686}
        />
        <Text
          alignCenter={false}
          allowFontScaling={false}
          bannerType="STAR"
          color="#000000"
          fontFamily="BOLD"
          fontSize={22}
          isUnderlined={false}
          isUppercase={true}
          maxFontSizeMultiplier={1.3}
          size="BANNER_LARGE"
          style={
            Array [
              Object {
                "color": "#000000",
                "fontFamily": "CalibreBold",
                "fontSize": 34.5,
                "justifyContent": "center",
                "textAlign": "left",
                "textDecorationColor": "#000000",
                "textDecorationLine": "none",
                "textDecorationStyle": "solid",
                "textTransform": "uppercase",
              },
              Object {
                "color": "#FFFFFF",
                "letterSpacing": 1.5,
                "position": "absolute",
              },
            ]
          }
        >
          VIP
        </Text>
      </View>
      <View
        height={286}
        onLayout={[Function]}
        paddingTop={20}
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#FFFFFF",
              "borderBottomLeftRadius": 16,
              "borderBottomRightRadius": 16,
              "height": 572,
              "justifyContent": "flex-start",
              "marginTop": -40,
              "paddingHorizontal": 42,
              "paddingTop": 40,
              "shadowColor": "rgba(53, 53, 53, 0.3)",
              "shadowOffset": Object {
                "height": 4,
                "width": 4,
              },
              "shadowOpacity": 1,
              "shadowRadius": 2,
              "width": "85%",
              "zIndex": -1,
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "flex-start",
                "height": 254,
                "justifyContent": "center",
                "width": "70%",
              },
            ]
          }
        >
          <View
            marginTop={0}
            style={
              Array [
                Object {
                  "flexDirection": "row",
                  "marginTop": 0,
                },
              ]
            }
          >
            <Image
              resizeMode="contain"
              source={1}
              style={
                Array [
                  Object {
                    "height": 40,
                    "width": 40,
                  },
                ]
              }
            />
            <Text
              alignCenter={false}
              allowFontScaling={true}
              color="#353535"
              fontFamily="REGULAR"
              isUnderlined={false}
              isUppercase={false}
              maxFontSizeMultiplier={1.3}
              size="XSMALL"
              style={
                Array [
                  Object {
                    "color": "#353535",
                    "fontFamily": "CalibreRegular",
                    "fontSize": 24,
                    "justifyContent": "center",
                    "textAlign": "left",
                    "textDecorationColor": "#353535",
                    "textDecorationLine": "none",
                    "textDecorationStyle": "solid",
                    "textTransform": "none",
                  },
                  Object {
                    "marginLeft": 16,
                    "paddingTop": 10,
                  },
                ]
              }
            >
              Token purchase 0% bonus
            </Text>
          </View>
          <View
            marginTop={8}
            style={
              Array [
                Object {
                  "flexDirection": "row",
                  "marginTop": 16,
                },
              ]
            }
          >
            <Image
              resizeMode="contain"
              source={1}
              style={
                Array [
                  Object {
                    "height": 40,
                    "width": 40,
                  },
                ]
              }
            />
            <Text
              alignCenter={false}
              allowFontScaling={true}
              color="#353535"
              fontFamily="REGULAR"
              isUnderlined={false}
              isUppercase={false}
              maxFontSizeMultiplier={1.3}
              size="XSMALL"
              style={
                Array [
                  Object {
                    "color": "#353535",
                    "fontFamily": "CalibreRegular",
                    "fontSize": 24,
                    "justifyContent": "center",
                    "textAlign": "left",
                    "textDecorationColor": "#353535",
                    "textDecorationLine": "none",
                    "textDecorationStyle": "solid",
                    "textTransform": "none",
                  },
                  Object {
                    "marginLeft": 16,
                    "paddingTop": 10,
                  },
                ]
              }
            >
              Token purchase 0% bonus
            </Text>
          </View>
          <View
            marginTop={8}
            style={
              Array [
                Object {
                  "flexDirection": "row",
                  "marginTop": 16,
                },
              ]
            }
          >
            <Image
              resizeMode="contain"
              source={1}
              style={
                Array [
                  Object {
                    "height": 40,
                    "width": 40,
                  },
                ]
              }
            />
            <Text
              alignCenter={false}
              allowFontScaling={true}
              color="#353535"
              fontFamily="REGULAR"
              isUnderlined={false}
              isUppercase={false}
              maxFontSizeMultiplier={1.3}
              size="XSMALL"
              style={
                Array [
                  Object {
                    "color": "#353535",
                    "fontFamily": "CalibreRegular",
                    "fontSize": 24,
                    "justifyContent": "center",
                    "textAlign": "left",
                    "textDecorationColor": "#353535",
                    "textDecorationLine": "none",
                    "textDecorationStyle": "solid",
                    "textTransform": "none",
                  },
                  Object {
                    "marginLeft": 16,
                    "paddingTop": 10,
                  },
                ]
              }
            >
              Free 0 tokens on level up
            </Text>
          </View>
        </View>
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#5F6EAF",
                "borderRadius": 16,
                "height": 254,
                "paddingTop": 48,
                "width": "92.5%",
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "width": 366,
                },
              ]
            }
          >
            <View
              isCenter={true}
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "center",
                    "marginTop": 0,
                  },
                ]
              }
            >
              <View
                bgColor="#F06B59"
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#F06B59",
                      "borderRadius": 24,
                      "height": 48,
                      "justifyContent": "center",
                      "width": 48,
                    },
                  ]
                }
              >
                <Text
                  alignCenter={false}
                  allowFontScaling={true}
                  color="#000000"
                  fontFamily="BOLD"
                  isUnderlined={false}
                  isUppercase={false}
                  maxFontSizeMultiplier={1.3}
                  size="XSMALL"
                  style={
                    Array [
                      Object {
                        "color": "#000000",
                        "fontFamily": "CalibreBold",
                        "fontSize": 24,
                        "justifyContent": "center",
                        "textAlign": "left",
                        "textDecorationColor": "#000000",
                        "textDecorationLine": "none",
                        "textDecorationStyle": "solid",
                        "textTransform": "none",
                      },
                      Object {
                        "color": "#FFFFFF",
                        "lineHeight": 38,
                        "marginTop": 10,
                      },
                    ]
                  }
                >
                  1
                </Text>
              </View>
              <View
                style={
                  Array [
                    Object {
                      "backgroundColor": "#E5E5E5",
                      "borderRadius": 12,
                      "height": 16,
                      "marginHorizontal": 12,
                      "width": "70%",
                    },
                  ]
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "backgroundColor": "#FFDB4F",
                        "borderRadius": 12,
                        "height": 16,
                        "position": "absolute",
                        "width": "0%",
                      },
                    ]
                  }
                  width={0}
                />
              </View>
              <View
                bgColor="#E5E5E5"
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#E5E5E5",
                      "borderRadius": 24,
                      "height": 48,
                      "justifyContent": "center",
                      "width": 48,
                    },
                  ]
                }
              >
                <Text
                  alignCenter={false}
                  allowFontScaling={true}
                  color="#000000"
                  fontFamily="BOLD"
                  isUnderlined={false}
                  isUppercase={false}
                  maxFontSizeMultiplier={1.3}
                  size="XSMALL"
                  style={
                    Array [
                      Object {
                        "color": "#000000",
                        "fontFamily": "CalibreBold",
                        "fontSize": 24,
                        "justifyContent": "center",
                        "textAlign": "left",
                        "textDecorationColor": "#000000",
                        "textDecorationLine": "none",
                        "textDecorationStyle": "solid",
                        "textTransform": "none",
                      },
                      Object {
                        "color": "#FFFFFF",
                        "lineHeight": 38,
                        "marginTop": 10,
                      },
                    ]
                  }
                >
                  2
                </Text>
              </View>
            </View>
            <View
              isCenter={true}
              marginTop={true}
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "center",
                    "marginTop": 18,
                  },
                ]
              }
            >
              <Image
                resizeMode="cover"
                source={1}
                style={
                  Array [
                    Object {
                      "height": 24,
                      "width": 24,
                    },
                  ]
                }
              />
              <Text
                alignCenter={false}
                allowFontScaling={true}
                color="#FFFFFF"
                fontFamily="MEDIUM"
                isUnderlined={false}
                isUppercase={false}
                maxFontSizeMultiplier={1.3}
                size="XXSMALL"
                style={
                  Array [
                    Object {
                      "color": "#FFFFFF",
                      "fontFamily": "Calibre-Medium",
                      "fontSize": 21,
                      "justifyContent": "center",
                      "textAlign": "left",
                      "textDecorationColor": "#FFFFFF",
                      "textDecorationLine": "none",
                      "textDecorationStyle": "solid",
                      "textTransform": "none",
                    },
                    Object {
                      "marginLeft": 10,
                      "paddingTop": 12,
                    },
                  ]
                }
              >
                Only 80 away from level 2
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={
          Array [
            Object {
              "alignItems": "center",
              "justifyContent": "center",
              "marginHorizontal": 10,
              "marginVertical": 10,
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "rgba(96,202,142,1)",
              "borderRadius": 88,
              "height": 176,
              "justifyContent": "center",
              "marginTop": -92,
              "opacity": 1,
              "width": 542,
            }
          }
          testID="dismiss-button"
        >
          <View
            borderRadius={44}
            colorScheme="rgba(128,229,173,1)"
            height={88}
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "rgba(128,229,173,1)",
                  "borderRadius": 88,
                  "height": 166,
                  "justifyContent": "center",
                  "width": 536,
                },
              ]
            }
            width={271}
          >
            <View
              borderRadius={44}
              colorScheme="rgba(114,213,158,1)"
              height={88}
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "rgba(114,213,158,1)",
                    "borderRadius": 108,
                    "height": 162,
                    "justifyContent": "center",
                    "marginTop": 8,
                    "width": 536,
                  },
                ]
              }
              width={271}
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "justifyContent": "center",
                    },
                  ]
                }
              >
                <Text
                  alignCenter={false}
                  allowFontScaling={true}
                  color="#FFFFFF"
                  fontFamily="MEDIUM"
                  isUnderlined={false}
                  isUppercase={false}
                  maxFontSizeMultiplier={1.3}
                  size="XLARGE"
                  style={
                    Array [
                      Object {
                        "color": "#FFFFFF",
                        "fontFamily": "Calibre-Medium",
                        "fontSize": 36,
                        "justifyContent": "center",
                        "textAlign": "left",
                        "textDecorationColor": "#FFFFFF",
                        "textDecorationLine": "none",
                        "textDecorationStyle": "solid",
                        "textTransform": "none",
                      },
                      Object {
                        "marginTop": 14,
                      },
                    ]
                  }
                >
                  Awesome!
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</Modal>
`;
